v0.10:

o Now including duplicate files during par2 repair

o All filename paths in the config file now expand the "~" character to the
  user's home directory

o Added support for compressed (.zip) nzbs (thanks Freddie)

o Fixed the following IOError occurring on malformed NZBs that include multiple
<segment>s of the same segment number for a particular <file> (particularly
those NZBs created by newzleech.com):

IOError: [Errno 2] No such file or directory:
'/nzb/daemon.temp/download-tmp/hellanzb-tmp-archvie.file0172.segment0001_ENC'

o Fixed defineServer's bindTo option

o Better handling of slow NZB copies to the queue directory (won't queue the
  NZB until it's fully copied)

v0.9:

NZBLeecher:

o New feature: smartpar. hellanzb will now skip downloading extra par2/par1
files. If the post processor finds the archive requires more par data for
repair, hellanzb will automatically force the download of a minimal amount of
extra pars immediately

Daemon:
o New remote call: 'setrarpass'
(From hellanzb.py --help)

  setrarpass nzbid pass Set the rarPassword for the NZB with the specified ID

o Rar passwords are now saved in between CTRL-Cs.

o No longer leaving enqueuednewzbin/dequeued/cancelled NZBs in the TEMP_DIR

o Added the Hellanzb.UMASK option to force umask in daemon mode


v0.8:

Daemon:

o Fixed a nasty bug with the 'clear' RPC call -- it was deleting all files in
  the QUEUE_DIR (not just queued .nzb files). This bug prevented hellanzb from
  working nicely with shared QUEUE_DIRs (such as your web browser's download
  dir. This technique was even recommended in hellanzb's OS X install
  document), in fact, it could cause unwanted data loss (thanks yak)

o Quicker and more robust newzbin.com downloads (enqueuenewzbin call)

NZBLeecher:

o Added duplicate file detection/handling. Previously, NZB files containing
  duplicate files could cause the downloader to stop (at the end of an archive)
  under certain situations
